--- a/index.html
+++ b/index.html
@@ -3,5 +3,8 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
+<p>Temp: <a href="temp_vs_pain.html">Temp</a></p>
+   <p>Humidity: <a href="humidity_vs_pain.html">Temp</a></p>
+    <p>Pressure: <a href="pressure_vs_pain.html">Temp</a></p>
 </body>
 </html>
