--- a/humidity_vs_pain.html
+++ b/humidity_vs_pain.html
@@ -103,7 +103,7 @@
        // format data to 0 decimal places
        var format = d3.format(".0f")
        // read data
-       d3.csv("WeatherVsPain.csv", function(data){
+       d3.csv("../WeatherVsPain.csv", function(data){
             // format the data
            
            data.forEach(function(d) {
