--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
 <p>Temp: <a href="temp_vs_pain.html">Temp</a></p>
    <p>Humidity: <a href="humidity_vs_pain.html">Temp</a></p>
     <p>Pressure: <a href="pressure_vs_pain.html">Temp</a></p>
+    <p>responisve_bar: <a href="responisve_bar.html">Temp</a></p>
+    
 </body>
 </html>
