--- a/temp_vs_pain.html
+++ b/temp_vs_pain.html
@@ -301,7 +301,7 @@
               .attr("x", width / 2 )
               .attr("y", 0)
               .style("text-anchor", "middle")
-              .text("Temperature vs Percentage of People with Pains")
+              .text("Temperature vs Percentage of People with Joint Pains")
            
            // label data on bar
             svg.selectAll(".text")        
@@ -331,7 +331,7 @@
            // legend
            const colors = ["#FFA500","#9f0000"];
            // set a two length array for number of legends
-           var lengedlenth = ["Temperature °C", "Percentage of People with Pains"]
+           var lengedlenth = ["Temperature °C", "Percentage of People with Joint Pains"]
            
            var legend = svg.append('g')
                 .attr('class', 'legend')
