--- a/temp_vs_pain.html
+++ b/temp_vs_pain.html
@@ -284,7 +284,7 @@
               .attr("dy", "1em")
               .style("fill",'#9f0000')
               .style("text-anchor", "middle")
-              .text("Percentage of People with Pains");  
+              .text("Percentage of People with Joint Pains");  
            
            // y1-axis label, temp
            svg.append("text")
