--- a/barchart_line.html
+++ b/barchart_line.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
     <style> /* set the CSS */
-
+        .box{
+            fill: red;   
+        }
+        
         .line {
           fill: none;
           stroke: steelblue;
