title size consistent

--- a/temp_vs_pain.html
+++ b/temp_vs_pain.html
@@ -301,6 +301,7 @@
               .attr("x", width / 2 )
               .attr("y", 0)
               .style("text-anchor", "middle")
+              .style("font-size","20px")
               .text("Temperature vs Percentage of People with Joint Pains")
            
            // label data on bar
