--- a/humidity_vs_pain.html
+++ b/humidity_vs_pain.html
@@ -298,6 +298,7 @@
               .attr("x", width / 2 )
               .attr("y", 0)
               .style("text-anchor", "middle")
+              .style("font-size","20px")
               .text("Relateive Humidity vs Percentage of People with Joint Pains")
            
            // label data on bar
