--- a/humidity_vs_pain.html
+++ b/humidity_vs_pain.html
@@ -299,7 +299,7 @@
               .attr("y", 0)
               .style("text-anchor", "middle")
               .style("font-size","20px")
-              .text("Relateive Humidity vs Percentage of People with Joint Pains")
+              .text("Relative Humidity vs Percentage of People with Joint Pains")
            
            // label data on bar
             svg.selectAll(".text")        
