--- a/temp_vs_pain.html
+++ b/temp_vs_pain.html
@@ -52,8 +52,8 @@
              
        // set the dimensions and margins of the graph
         var margin = {top: 20, right: 40, bottom: 30, left: 50},
-            width = 960 - margin.left - margin.right,
-            height = 600 - margin.top - margin.bottom;
+            width = window.innerWidth - margin.left - margin.right,
+            height = window.innerHeight - margin.top - margin.bottom;
         
         // parse the date / time
         var parseTime = d3.timeParse("%d-%b-%y");
