--- a/temp_vs_pain.html
+++ b/temp_vs_pain.html
@@ -305,7 +305,7 @@
               .text("Temperature vs Percentage of People with Joint Pains")
            
            // label data on bar
-            svg.selectAll(".text")        
+          /*  svg.selectAll(".text")        
                .data(data)
                .enter()
                .append("text")
@@ -314,7 +314,7 @@
                .attr("y", function(d) { return yBar(d.Pain) + 8 })
                .attr("dy", ".75em")
                //.attr("font-weight","bold")
-               .text(function(d) { return d.Pain + "%"; });  
+               .text(function(d) { return d.Pain + "%"; });  */
            
            // label data on line
             svg.selectAll(".text")        
