--- a/temp_vs_pain.html
+++ b/temp_vs_pain.html
@@ -51,8 +51,8 @@
       <script>
              
        // set the dimensions and margins of the graph
-        var margin = {top: 20, right: 40, bottom: 30, left: 50},
-            width = window.innerWidth - margin.left - margin.right,
+        var margin = {top: 20, right: 40, bottom: 30, left: 40},
+            width = window.innerWidth - margin.left*2 - margin.right*2,
             height = window.innerHeight - margin.top - margin.bottom;
         
         // parse the date / time
