--- a/humidity_vs_pain.html
+++ b/humidity_vs_pain.html
@@ -325,8 +325,8 @@
                .enter()
                .append("text")
                .attr("class","label")
-               .attr("x", (function(d) { return xLine(d.Month) - 15; }  ))
-               .attr("y", function(d) { return yLine(d.Humidity) - 35; })
+               .attr("x", (function(d) { return xLine(d.Month); }  ))
+               .attr("y", function(d) { return yLine(d.Humidity) - margin.left/2; })
                .attr("dy", ".75em")
                //.attr("font-weight","bold")
                .style("font-size", "13px")
