--- a/pressure_vs_pain.html
+++ b/pressure_vs_pain.html
@@ -321,8 +321,8 @@
                .enter()
                .append("text")
                .attr("class","label")
-               .attr("x", (function(d) { return xLine(d.Month) - 25; }  ))
-               .attr("y", function(d) { return yLine(d.Pressure) - 35; })
+               .attr("x", (function(d) { return xLine(d.Month); }  ))
+               .attr("y", function(d) { return yLine(d.Pressure) - margin.left/2; })
                .attr("dy", ".75em")
                .style("font-size", "11px")
                .style("font-family",'"Lato", sans-serif')
