--- a/temp_vs_pain.html
+++ b/temp_vs_pain.html
@@ -346,7 +346,7 @@
            // legend
            const colors = ["#FFA500","#9f0000"];
            // set a two length array for number of legends
-           var lengedlenth = ["Temperature °C", "Percentage of People with Joint Pains"]
+           var lengedlenth = ["Temperature °C", "Percentage of People with Joints Pain"]
            
            var legend = svg.append('g')
                 .attr('class', 'legend')
