--- a/humidity_vs_pain.html
+++ b/humidity_vs_pain.html
@@ -67,8 +67,8 @@ function drawGraphic() {
         // set the ranges
         var xBar = d3.scaleBand().range([0, width]).paddingInner(0.4).paddingOuter(0.4);
         var xLine = d3.scalePoint().range([0, width]).padding(0.5);
-        var yBar = d3.scaleLinear().range([500, 0]);
-        var yLine = d3.scaleLinear().range([500, 0]);
+        var yBar = d3.scaleLinear().range([(height-margin.bottom), 0]);
+        var yLine = d3.scaleLinear().range([(height-margin.bottom), 0]);
         
         
         // define the 1st line
@@ -177,7 +177,7 @@ function drawGraphic() {
               .attr("x", function(d){ return xBar(d.Month); })
               .attr("width", function(d){ return xBar.bandwidth(); })
               .attr("y", function(d){ return yBar(d.Pain); })
-              .attr("height", function(d){ return 500 - yBar(d.Pain); })
+              .attr("height", function(d){ return (height-margin.bottom) - yBar(d.Pain); })
                     .on("mouseover", function(d) {		
                 div.transition()		
                     .duration(20)		
@@ -261,7 +261,7 @@ function drawGraphic() {
 
           // Add the X Axis
           svg.append("g")
-              .attr("transform", "translate(0," + 500 + ")")
+              .attr("transform", "translate(0," + (height-margin.bottom) + ")")
               .call(d3.axisBottom(xLine));
 
           // Add the Y0 Axis
@@ -279,7 +279,7 @@ function drawGraphic() {
           // x-axis label
           svg.append("text")             
              .attr("transform","translate(" + (width/2) + " ," + 
-                550 + ")")
+                height + ")")
              .style("text-anchor", "middle")
              .style("font-family",'"Lato", sans-serif')
              .style("font-size","12px")
@@ -359,7 +359,7 @@ function drawGraphic() {
                 .append('rect')
                 .attr('x', -15)
                 .attr('y', function(d, i){
-                    return (i * 18)+520;
+                    return (i * 15)+height-10;
                 })
                 .attr('width', 12)
                 .attr('height', 12)
@@ -376,7 +376,7 @@ function drawGraphic() {
                   })
                   .attr('x', 0)
                   .attr('y', function(d, i){
-                    return (i * 18)+522;
+                    return (i * 15)+height-10;
                   })
                   .attr('text-anchor', 'start')
                   .attr('alignment-baseline', 'hanging')
