--- a/temp_vs_pain.html
+++ b/temp_vs_pain.html
@@ -1,6 +1,21 @@
 <!DOCTYPE html>
 <html>
     <style> /* set the CSS */
+        
+        .svg-container {
+            display: inline-block;
+            position: relative;
+            width: 100%;
+            padding-bottom: 100%;
+            vertical-align: top;
+            overflow: hidden;
+        }
+        .svg-content-responsive {
+            display: inline-block;
+            position: absolute;
+            top: 10px;
+            left: 0;
+        }
 
         .line {
           fill: none;
@@ -82,9 +97,19 @@
         // append the svg obgect to the body of the page
         // appends a 'group' element to 'svg'
         // moves the 'group' element to the top left margin
-        var svg = d3.select("body").append("svg")
-            .attr("width", width + margin.left + margin.right)
-            .attr("height", height + margin.top + margin.bottom)
+      /*    var svg = d3.select("div#container")
+                      .append("svg")
+                      .attr("preserveAspectRatio", "xMinYMin meet")
+                      .attr("viewBox", "0 0 300 300")
+                      .classed("svg-content", true);
+*/
+        var svg = d3.select("body").classed("svg-container",true)
+            .append("svg")
+            //.attr("width", width + margin.left + margin.right)
+            //.attr("height", height + margin.top + margin.bottom)
+            .attr("viewBox", "0 0 300 300")
+            .attr("preserveAspectRatio", "xMinYMin meet")
+            .classed("svg-content-responsive", true)
             .append("g")
             .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
           
