remove label on line

--- a/temp_vs_pain.html
+++ b/temp_vs_pain.html
@@ -330,7 +330,7 @@
                .attr("y", function(d) { return yBar(d.Pain) + 8 })
                .attr("dy", ".75em")
                //.attr("font-weight","bold")
-               .text(function(d) { return d.Pain + "%"; });  */
+               .text(function(d) { return d.Pain + "%"; });  
            
            // label data on line
             svg.selectAll(".text")        
@@ -345,7 +345,7 @@
                .text(function(d) { return d.Temp + " °C"; })
                .style("font-size", "8px")
                 .style("font-family",'"Lato", sans-serif');  
-           
+           */
            // legend
            const colors = ["#FFA500","#9f0000",'#ffffff'];
            // set a two length array for number of legends
