Change tilte name on index

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
+<h1>Weather Inisghts graphs</h1>
 <p>I'm hosted with GitHub Pages.</p>
 <p>Temp: <a href="temp_vs_pain.html">Temp</a></p>
    <p>Humidity: <a href="humidity_vs_pain.html">Temp</a></p>
