--- a/temp_vs_pain.html
+++ b/temp_vs_pain.html
@@ -283,7 +283,7 @@
                 (height) + ")")
              .style("text-anchor", "middle")
              .style("font-family",'"Lato", sans-serif')
-             .style("font-size","12px")
+             .style("font-size",(width * 0.0010) + "em")
              .text("Month");
            
            // y0-axis label, bar
