--- a/temp_vs_pain.html
+++ b/temp_vs_pain.html
@@ -119,7 +119,7 @@
               d.Humidity = +d.Humidity;
               d.Pressure = +d.Pressure;
           });
-           console.log(data);
+        //   console.log(data);
           
         // Scale the range of the data
           xBar.domain(data.map(function(d) { return d.Month; }));
@@ -199,16 +199,6 @@
                 //d3.select(this).attr("r", 10).style("fill", "#9f0000")
                 });
            
-           // not doing anything
-           rect.append("text")
-                  .text(function(d){
-                    return d.Pain + '%';
-                  })
-                  .attr("x", function(d) { return (xBar.bandwidth()); })
-                    .attr("y", function(d) { return yBar(d.Pain); })
-                    .style("text-anchor", "middle")
-                    .style("font-family",'"Lato", sans-serif');
-
           /*
           // circle on data 
           var points2 = svg.selectAll("circle.point2")
