--- a/pressure_vs_pain.html
+++ b/pressure_vs_pain.html
@@ -46,6 +46,9 @@
    <body>
       
       <script>
+          //disable console log
+        console.log = function(){}
+        
   function drawGraphic() {              
        // set the dimensions and margins of the graph
         var margin = {top: 20, right: 30, bottom: 30, left: 30},
