--- a/humidity_vs_pain.html
+++ b/humidity_vs_pain.html
@@ -383,16 +383,21 @@
      drawGraphic();  
         
           // Use a timer so the chart is not constantly redrawn while window is being resized.
-var resizeTimer;
-window.onresize = function(event) {
- clearTimeout(resizeTimer);
-  resizeTimer = setTimeout(function()
-  {
-    var s = d3.selectAll('svg');
-    s = s.remove();
-    drawGraphic();
-  }, 100);
-}
+     var resizeTimer;
+        window.onresize = function(event) {
+        clearTimeout(resizeTimer);
+        resizeTimer = setTimeout(function()
+              {
+                var s = d3.selectAll('svg');
+                s = s.remove();
+                if (window.innerHeight < 200){
+                    console.log("too small")
+                }
+                else {
+                    console.log('big enough')
+                    drawGraphic();}
+              }, 100);
+            }
       </script>
    </body>
 
