upload fit5147 d3.js graph
upload fit5147 d3.js graph

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
+    <h1>Visualisation Graphs d3.js</h1>
+    <a href="yuming.html">Click here</a></p>
 <h1>Weather Inisghts graphs</h1>
 <p>I'm hosted with GitHub Pages.</p>
 <p>Temp: <a href="temp_vs_pain.html">Temp</a></p>
