--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <body>
     <h1>Visualisation Graphs d3.js</h1>
     <a href="yuming.html">Click here</a></p>
+    <a href="index%202.html">Best looking</a></p>
 <h1>Weather Inisghts graphs</h1>
 <p>I'm hosted with GitHub Pages.</p>
 <p>Temp: <a href="temp_vs_pain.html">Temp</a></p>
