update index link

--- a/second.html
+++ b/second.html
@@ -136,7 +136,7 @@
     
 </style>
     <div id="Page">
-        <button id="buttonplayer" onclick="location.href='index.html'" value="Players">Back: Leagues Stats</button>
+        <button id="buttonplayer" onclick="location.href='index%202.html'" value="Players">Back: Leagues Stats</button>
         <button id="buttonwages" onclick="location.href='third.html'" value="Players">Next: Wages</button>
     </div>
     
