--- a/third.html
+++ b/third.html
@@ -167,7 +167,7 @@
 						</label>
 					</div>
     <div id="Page">
-        <button id="buttonplayer" onclick="location.href='index.html'" value="Players">Home: Leagues Stats</button>
+        <button id="buttonplayer" onclick="location.href='index%202.html'" value="Players">Home: Leagues Stats</button>
         <button id="buttonwages" onclick="location.href='second.html'" value="Players">Back: Player Stats</button>
     </div>
     <p id = 'dropdown_title' style="font-family: arial;" >Change Position:</p>
