--- a/index 2.html
+++ b/index 2.html
@@ -225,9 +225,9 @@
     </div>
     <div id="worldmap"></div>
     <div id="vis"></div>
-    <script src="http://d3js.org/d3.v4.min.js"></script>
-    <script src="http://d3js.org/queue.v1.min.js"></script>
-    <script src="http://d3js.org/topojson.v1.min.js"></script>
+    <script src="https://d3js.org/d3.v4.min.js"></script>
+    <script src="https://d3js.org/queue.v1.min.js"></script>
+    <script src="https://d3js.org/topojson.v1.min.js"></script>
     <script src="./script/Visualization_Map.js"></script>
     <script src="./script/barchart.js".></script>
     
